--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.2.6",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
-    "sass": "^1.57.1"
+    "react-table": "^7.8.0",
+    "sass": "^1.57.1",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
